examples/test/testpolicy11590.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11590
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key29: value0
      key2: value43
      key39: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value8
      podSelector:
        matchLabels:
          key32: value29
          key20: value1
          key21: value33
